--- a/src/CSS/MainNavBar.css
+++ b/src/CSS/MainNavBar.css
@@ -1,8 +1,85 @@
 nav.main-nav-bar {
+  background-color: #C51431;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  height: 100px;
+  border-bottom: 5px solid #5d0917;
 }
 
-div.nc-news.title h1 {
-  display: inline-block;
+
+/* --------------------NC NEWS LOGO AND TEXT */
+a.nc-news.title{
+  display: flex;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  width: 40%;
+}
+
+a.nc-news.title div img{
+  padding-top: 4px;
+}
+
+a.nc-news.title h1 {
+  font-size: 40px;
+  line-height: 100px;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  
+}
+
+a.nc-news.title:hover{
+  display: flex;
+  text-decoration: none;
+  color: #ea2e4e;
+}
+
+
+/* --------------------NC NEWS LOGO AND TEXT */
+div.user-search {
+  text-align: center;
+  width: 30%;
+}
+
+div.user-search form{
+  padding-top: 26px;
+}
+
+div.user-search input {
+  font-family: 'Poppins';
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: 3px solid #5d0917;
+  background-color: #8b0e23;
+  color: white;
+  font-size: 22px;
+  height: 40px;
+  padding: 0;
+  width: 70%;
+}
+
+div.user-search input::placeholder {
+  color: #d11534;
+  font-family: 'Poppins';
+  line-height: 40px;
+}
+
+div.user-search input:focus {
+  outline: none;
+  border: 3px solid #e8173a;
+}
+div.user-search button:focus {
+  outline: none;
+  border: 3px solid #e8173a;
+}
+
+div.user-search button{
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border: 3px solid #5d0917;
+  background-color: #ba122e;
+  color: white;
+  font-size: 22px;
+  font-family: 'Poppins';
+  height: 46px;
 }
