--- a/src/CSS/ArticleList.css
+++ b/src/CSS/ArticleList.css
@@ -1,12 +1,82 @@
+section.homepage-content {
+  display: flex;
+}
+
+section.homepage.articles {
+  width: 70%;
+}
+section.homepage.topic-list {
+  width: 25%;
+}
 div.articles-header h1 {
  display: inline;
 }
 
 div.sort-order {
   float: right;
+  display: block;
 }
 
 div.sort-order p {
   display: inline;
   margin-left: 5px;
+}
+
+div.articles {
+  text-align: center;
+  padding: 20px;
+}
+
+div.article-card {
+  display: grid;
+  grid-template-columns: 70% 20%;
+  grid-column-gap: 5%;
+  text-align: left;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  background-color: #C51431;
+  border: 3px solid #5d0917;
+  border-radius: 5px;
+}
+
+div.article-card h1 {
+  padding: 10px;
+  color: #1C2826;
+}
+
+div.article-card p{
+  color: #1C2826;
+  padding: 10px;
+}
+
+div.sort-order p {
+  border: 3px solid #5d0917;
+  border-radius: 5px;
+  padding: 5px;
+}
+div.sort-order p:hover {
+  cursor: pointer;
+}
+
+div.sort-order p.true {
+  color: #EEF4D4;
+  background-color: #ba122e;
+}
+
+div.votes {
+  text-align: right;
+  height: 100%;
+  padding-top: 20px;
+}
+
+div.votes-placeholder {
+  display: block;
+}
+
+div.votes .up-on {
+  color: green;
+
+}
+div.votes .down-on {
+  color: red;
 }
