--- a/src/CSS/MainNavBar.css
+++ b/src/CSS/MainNavBar.css
@@ -168,13 +168,13 @@ div.navbar-user div.navbar-usercard {
   justify-content: space-evenly;
 }
 
-div.navbar-user img {
+div.navbar-usercard img {
   height: 65px;
   border: 3px solid #5d0917;
   border-radius: 5px;
 }
 
-div.navbar-user h2 {
+div.navbar-usercard h2 {
   color: #EEF4D4;
   font-family: 'Poppins';
   text-decoration: none;
