--- a/src/CSS/ArticleList.css
+++ b/src/CSS/ArticleList.css
@@ -1,13 +1,3 @@
-section.homepage-content {
-  display: flex;
-}
-
-section.homepage.articles {
-  width: 70%;
-}
-section.homepage.topic-list {
-  width: 25%;
-}
 div.articles-header h1 {
  display: inline;
 }
@@ -41,7 +31,7 @@ div.article-card {
 
 div.article-card h1 {
   padding: 10px;
-  color: #1C2826;
+  color: #EEF4D4;
 }
 
 div.article-card p{
@@ -80,3 +70,35 @@ div.votes .up-on {
 div.votes .down-on {
   color: red;
 }
+
+@media only screen and (max-width: 850px) {
+  section.homepage.articles {
+    width: 100%;
+    margin: auto;
+  }
+
+  div.articles {
+    width: 100%;
+    padding: 0;
+  }
+
+  div.articles-header h1 {
+    display: block;
+}
+
+  div.sort-order {
+    float: none;
+    display: block;
+  }
+
+  div.sort-order p {
+    font-size: 12px;
+  }
+
+  div.article-card h1 {
+  font-size: 20px;
+  }
+  div.article-card p {
+  font-size: 12px;
+  }
+} 
