--- a/src/CSS/TopicArticles.css
+++ b/src/CSS/TopicArticles.css
@@ -3,11 +3,24 @@ div.topic-articles-content {
 }
 
 div.topic-articles-submit a h1 {
-  display: inline;
+  display: block;
+  text-align: center;
+  color: #EEF4D4;
+  background-color: #C51431;
+  border: 3px solid #5d0917;
+  border-radius: 5px;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 @media only screen and (max-width: 850px) {
   div.topic-articles-content {
     display: block;
+  }
+
+  div.topic-articles-submit a h1 {
+    width: 90%;
   }
 }
